--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ section {
     flex-direction: column;
     border: 4px solid #59A9D7;
     border-radius: 12px;
+    box-shadow: 6px 6px 10px 0px rgba(0, 0, 0, 0.44);
 }
 
 h3 {
